--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,18 +7,14 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-  
-    - name: Install dependencies
-      run: sudo apt install sudo apt-get install texlive-xetex
-      
-    - name: Add ttc
-      run: wget https://github.com/chrissimpkins/codeface/raw/master/cjk-fonts/source-han-sans-HWSC/SourceHanSansHWSC-Regular.otf
-      
-    - name: Compile
-      run: make all
+ build:
+   name: Build
+   runs-on: ubuntu-latest
+   steps:
+     - uses: actions/checkout@master
+       with:
+         fetch-depth: 2
+     - name: run docker container
+       uses: docker://yangyw12345/tex-builder
+       with:
+         args: make all
