--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,4 +17,4 @@ jobs:
      - name: run docker container
        uses: docker://yangyw12345/tex-builder
        with:
-         args: make all
+         args: ln -sf ~/.fonts/SourceHanSansHWSC-Regular . && make all
