--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -18,6 +18,20 @@ jobs:
        uses: docker://yangyw12345/tex-builder
        with:
          args: make all
+     - name: Create Release
+       id: create_release
+       uses: actions/create-release@v1
+       env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+       with:
+         tag_name: ${{ github.ref }}
+         release_name: Release ${{ github.ref }}
+         body: |
+           Changes in this Release
+           - First Change
+           - Second Change
+         draft: false
+         prerelease: false
      - name: Upload Release Asset
        id: upload-release-asset 
        uses: actions/upload-release-asset@v1
