--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -43,7 +43,7 @@ jobs:
          asset_name: resume
          asset_content_type: application/pdf
      - name: Upload Release Asset
-       id: upload-release-asset 
+       id: upload-release-asset-1
        uses: actions/upload-release-asset@v1
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
