--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -32,23 +32,9 @@ jobs:
            - Second Change
          draft: false
          prerelease: false
-     - name: Upload Release Asset
-       id: upload-release-asset 
-       uses: actions/upload-release-asset@v1
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     - name: Upload Assets to Release with a wildcard
+       uses: csexton/release-asset-action@v2
        with:
-         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-         asset_path: ./resume.pdf
-         asset_name: resume
-         asset_content_type: application/pdf
-     - name: Upload Release Asset
-       id: upload-release-asset-1
-       uses: actions/upload-release-asset@v1
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       with:
-         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-         asset_path: ./resume-zh.pdf
-         asset_name: resume
-         asset_content_type: application/pdf
+         pattern: "*.pdf"
+         github-token: ${{ secrets.GITHUB_TOKEN }}
+         release-url: ${{ steps.create_release.outputs.upload_url }}
