--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -24,8 +24,8 @@ jobs:
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
        with:
-         tag_name: ${{ github.ref }}
-         release_name: Release ${{ github.ref }}
+         tag_name: main
+         release_name: Release main
          body: |
            Changes in this Release
            - First Change
